--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         }
     </style> -->
     <link rel="stylesheet" href="styles.css"> <!-- Importación de hoja de estilos styles.css-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -37,7 +40,7 @@
         </div>
     </header>
     <section class="main">      
-        <h1>Buil your. Build your business</h1>
+        <h1>Build your blog. Build your business</h1>
         <p>
             Instantly publish articles,drive more traffic, 
             grow your email list, and see your blog's impact on
